# car-price-prediction-api

./: .env-example  .gitignore  Dockerfile  README.md  config.yaml  main.py  model.py  pyproject.toml  requirements.txt  schema.py  utils.py
.github/workflows/: deploy.yaml  deploy.yml
src/: features.py  main.py  model.py  schema.py
